load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/xytan0056/test
gazelle(name = "gazelle")

go_library(
    name = "test_lib",
    srcs = ["main.go"],
    importpath = "github.com/xytan0056/test",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "test",
    embed = [":test_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "test_test",
    srcs = ["main_test.go"],
    embed = [":test_lib"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
